# pixelpong

./: .gitignore  CLAUDE.md  README.md  composer.json  package-lock.json  package.json  phpunit.xml  playwright.config.ts  run.sh
cpp/: meson.build
cpp/src/: main.cpp
cpp/src/bitmap/: bitmap.hpp  bitmap_loader.hpp  font.hpp  font_loader.hpp  sprite.hpp
cpp/src/frame/: color.hpp  frame_buffer.hpp  frame_encoder.hpp
cpp/src/game/: event.hpp  game_loop.hpp  joystick_test.hpp  main_game.hpp  maker_faire.hpp  press_start.hpp  test_image.hpp
cpp/src/server/: game_server.hpp  player_connection.hpp
cpp/subprojects/: stb.wrap  usockets.wrap  uwebsockets.wrap
cpp/subprojects/packagefiles/stb/: meson.build
cpp/subprojects/packagefiles/usockets/: meson.build
cpp/subprojects/packagefiles/uwebsockets/: meson.build
docs/: pixelpong-spec.md
go/: .gitignore  Dockerfile  bitmap.go  config.go  encoder.go  encoder_test.go  event.go  font.go  font_loader.go  framebuffer.go  framebuffer_test.go  gameloop.go  gameloop_joystick.go  gameloop_main.go  gameloop_makerfaire.go  gameloop_pressstart.go  gameloop_testimage.go  go.mod  loader.go  loader_test.go  main.go  palette.go  scrolling_bitmap.go  server.go  sprite.go  text_bitmap.go
php/: bootstrap.php  di-config.php
rust/: Cargo.toml
rust/src/: main.rs
rust/src/bitmap/: font.rs  loader.rs  mod.rs  scrolling.rs  sprite.rs  text_bitmap.rs
rust/src/frame/: ascii_encoder.rs  json_encoder.rs  mod.rs  offscreen.rs
rust/src/gameloop/: base.rs  joystick_test.rs  main_game.rs  maker_faire.rs  mod.rs  press_start.rs  test_image.rs
rust/src/server/: color.rs  event.rs  game_server.rs  mod.rs  player.rs
tests/: press-start-animation.spec.ts
ts/: package-lock.json  package.json
(+102 files in other folders)
